rescources/k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vm_net: "true"
        io.kompose.service: grafana
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - ' cd /var/lib/grafana && mkdir -p dashboards && sed ''s/${DS_PROMETHEUS}/Prometheus/g''
          vm.json > dashboards/vm.json && /run.sh'
        image: grafana/grafana:6.5.2
        imagePullPolicy: ""
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafanadata
        - mountPath: /etc/grafana/provisioning/
          name: grafana-claim1
        - mountPath: /var/lib/grafana/vm.json
          name: grafana-claim2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: grafanadata
        persistentVolumeClaim:
          claimName: grafanadata
      - name: grafana-claim1
        persistentVolumeClaim:
          claimName: grafana-claim1
      - name: grafana-claim2
        persistentVolumeClaim:
          claimName: grafana-claim2
status: {}
