rescources/k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vm_net: "true"
        io.kompose.service: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        image: prom/prometheus:v2.15.2
        imagePullPolicy: ""
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
        - mountPath: /prometheus
          name: promdata
        - mountPath: /etc/prometheus/prometheus.yml
          name: prometheus-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: promdata
        persistentVolumeClaim:
          claimName: promdata
      - name: prometheus-claim1
        persistentVolumeClaim:
          claimName: prometheus-claim1
status: {}
