rescources/k8s/victoriametrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: victoriametrics
  name: victoriametrics
spec:
  ports:
  - name: "8428"
    port: 8428
    targetPort: 8428
  - name: "2003"
    port: 2003
    targetPort: 2003
  - name: "4242"
    port: 4242
    targetPort: 4242
  selector:
    io.kompose.service: victoriametrics
status:
  loadBalancer: {}
